# nanochat

./: .gcloudignore  .gitignore  .mcp.json  CHANGELOG_GB10.md  CLAUDE.md  Dockerfile  README.md  TRAINING_PLAN.md  claude_install.sh  cloudbuild.yaml  cloudbuild_gpu.yaml  cpponline_plan.md  kill_run.sh  nanochat_cpp_model.md  opencode.json  run_train.sh  session-ses_3b0b.md  setup_a100_access.sh  tokenizer.json  tokenizer.pkl
.beads/: issues.jsonl
.claude/: ralph-loop.local.md  settings.json
data/: .gitignore
dev/: LOG.md
dgx_spark_config/: README.md  grace_blackwell_pytorch_autosetup.sh
docs/: DATA_PIPELINE.md  QUICKSTART.md  TENSOR_PARALLELISM.md  TOKENIZER_V2_PROPOSAL.md  TPU_SETUP.md  VOCAB_FREQUENCY_ANALYSIS.md  fire_integration_log.md  mamba_integration_log.md  mamba_review_followup_plan.md  review.md
nanochat/: adamw.py  checkpoint_manager.py  common.py  cpp_eval.py  cpp_tokenizer.py  cpp_verifier.py  dataloader.py  engine.py  engram.py  fim.py  fire.py  flash_attention.py  gke_executor.py  gpt.py  grpo.py  gspo.py  kernels.py  loss_eval.py  mamba2.py  meta_init.py  mhc.py  mtp.py  muon.py  sft_dataset.py  sparse_attention.py  tokenizer.py  tool_runtime.py  tool_sft_dataset.py
reports/: TRAINING_STATUS.md
scripts/: analyze_bandwidth.py  base_loss.py  base_train.py  bench_mamba_backends.py  (+33 more)
tools/cpp_chunker/: Cargo.toml  README.md
tools/cpp_chunker/src/: chunker.rs  commit.rs  compilable.rs  deps.rs  global_index.rs  main.rs  project_graph.rs
tools/vocab_analyzer/: Cargo.toml
tools/vocab_analyzer/src/: analyzer.rs  main.rs  patterns.rs
(+132 files in other folders)
