[package]
name = "cpp-chunker"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-language = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"
