[package]
name = "vocab-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
memmap2 = "0.9"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.release]
opt-level = 3
lto = "thin"
